--- a/SmartWallet/Base.lproj/Main.storyboard
+++ b/SmartWallet/Base.lproj/Main.storyboard
@@ -150,50 +150,74 @@
         <scene sceneID="7Wh-uJ-q7L">
             <objects>
                 <viewController id="ukE-wL-kas" customClass="ReceiveViewController" customModule="SmartWallet" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Dsi-aZ-CE4">
+                    <view key="view" contentMode="scaleToFill" id="Dsi-aZ-CE4" customClass="GradientView" customModule="SmartWallet" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send to your wallet" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7FG-IP-5li">
-                                <rect key="frame" x="20" y="50" width="374" height="35"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XPj-tt-sFc">
-                                <rect key="frame" x="87" y="115" width="240" height="240"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W1Z-fi-vGY" customClass="CardView" customModule="SmartWallet" customModuleProvider="target">
+                                <rect key="frame" x="20" y="115" width="374" height="431.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XPj-tt-sFc">
+                                        <rect key="frame" x="87" y="78" width="200" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="3tW-84-fVD"/>
+                                            <constraint firstAttribute="width" constant="200" id="U9e-Xc-2Le"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x7a6afc2d27cFE5940d6f4388e93B232d22F857b2" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qyM-kM-3yw">
+                                        <rect key="frame" x="30" y="298" width="314" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q89-o1-NFH" customClass="WalletButton" customModule="SmartWallet" customModuleProvider="target">
+                                        <rect key="frame" x="30" y="351.5" width="314" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Jgi-4x-NxL"/>
+                                        </constraints>
+                                        <state key="normal" title="Copy Address"/>
+                                        <connections>
+                                            <action selector="copyAddressAction:" destination="ukE-wL-kas" eventType="touchUpInside" id="zzn-dg-TaC"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scan the QR Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VzL-2i-JZo">
+                                        <rect key="frame" x="30" y="30" width="314" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                        <color key="textColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="240" id="3tW-84-fVD"/>
-                                    <constraint firstAttribute="width" constant="240" id="U9e-Xc-2Le"/>
+                                    <constraint firstItem="VzL-2i-JZo" firstAttribute="leading" secondItem="W1Z-fi-vGY" secondAttribute="leading" constant="30" id="4LD-Zk-LAy"/>
+                                    <constraint firstAttribute="trailing" secondItem="VzL-2i-JZo" secondAttribute="trailing" constant="30" id="749-dr-i59"/>
+                                    <constraint firstAttribute="bottom" secondItem="q89-o1-NFH" secondAttribute="bottom" constant="30" id="ADB-CG-OXA"/>
+                                    <constraint firstItem="qyM-kM-3yw" firstAttribute="leading" secondItem="W1Z-fi-vGY" secondAttribute="leading" constant="30" id="FJn-Qo-bK2"/>
+                                    <constraint firstItem="qyM-kM-3yw" firstAttribute="top" secondItem="XPj-tt-sFc" secondAttribute="bottom" constant="20" id="H4a-0k-Rtn"/>
+                                    <constraint firstItem="VzL-2i-JZo" firstAttribute="top" secondItem="W1Z-fi-vGY" secondAttribute="top" constant="30" id="HXr-eP-EZn"/>
+                                    <constraint firstItem="q89-o1-NFH" firstAttribute="leading" secondItem="W1Z-fi-vGY" secondAttribute="leading" constant="30" id="Tz2-WY-BDu"/>
+                                    <constraint firstItem="XPj-tt-sFc" firstAttribute="centerX" secondItem="W1Z-fi-vGY" secondAttribute="centerX" id="Yip-MZ-EUJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="qyM-kM-3yw" secondAttribute="trailing" constant="30" id="dWE-Yf-whF"/>
+                                    <constraint firstAttribute="trailing" secondItem="q89-o1-NFH" secondAttribute="trailing" constant="30" id="h61-cG-BMW"/>
+                                    <constraint firstItem="XPj-tt-sFc" firstAttribute="top" secondItem="VzL-2i-JZo" secondAttribute="bottom" constant="30" id="tfJ-PE-q3M"/>
+                                    <constraint firstItem="q89-o1-NFH" firstAttribute="top" secondItem="qyM-kM-3yw" secondAttribute="bottom" constant="20" id="yTD-qc-qOX"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0x7a6afc2d27cFE5940d6f4388e93B232d22F857b2" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qyM-kM-3yw">
-                                <rect key="frame" x="20" y="385" width="374" height="45.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <nil key="textColor"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receive" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7FG-IP-5li">
+                                <rect key="frame" x="20" y="30" width="374" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q89-o1-NFH">
-                                <rect key="frame" x="20" y="445.5" width="374" height="30"/>
-                                <state key="normal" title="Copy Address"/>
-                                <connections>
-                                    <action selector="copyAddressAction:" destination="ukE-wL-kas" eventType="touchUpInside" id="zzn-dg-TaC"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="q89-o1-NFH" firstAttribute="leading" secondItem="99e-eR-Gvg" secondAttribute="leading" constant="20" id="GOk-LI-TUY"/>
-                            <constraint firstItem="XPj-tt-sFc" firstAttribute="centerX" secondItem="Dsi-aZ-CE4" secondAttribute="centerX" id="Ssi-1H-Qib"/>
-                            <constraint firstItem="qyM-kM-3yw" firstAttribute="top" secondItem="XPj-tt-sFc" secondAttribute="bottom" constant="30" id="XZx-b6-1V8"/>
-                            <constraint firstItem="99e-eR-Gvg" firstAttribute="trailing" secondItem="q89-o1-NFH" secondAttribute="trailing" constant="20" id="Ybz-cY-Htb"/>
-                            <constraint firstItem="7FG-IP-5li" firstAttribute="top" secondItem="99e-eR-Gvg" secondAttribute="top" constant="50" id="Zg9-0a-EtQ"/>
-                            <constraint firstItem="qyM-kM-3yw" firstAttribute="leading" secondItem="99e-eR-Gvg" secondAttribute="leading" constant="20" id="ZuN-dw-ixD"/>
-                            <constraint firstItem="99e-eR-Gvg" firstAttribute="trailing" secondItem="7FG-IP-5li" secondAttribute="trailing" constant="20" id="o6e-TF-7mP"/>
-                            <constraint firstItem="q89-o1-NFH" firstAttribute="top" secondItem="qyM-kM-3yw" secondAttribute="bottom" constant="15" id="qSk-9U-K5X"/>
-                            <constraint firstItem="7FG-IP-5li" firstAttribute="leading" secondItem="99e-eR-Gvg" secondAttribute="leading" constant="20" id="roc-QL-aLK"/>
-                            <constraint firstItem="99e-eR-Gvg" firstAttribute="trailing" secondItem="qyM-kM-3yw" secondAttribute="trailing" constant="20" id="vWy-9g-RZr"/>
-                            <constraint firstItem="XPj-tt-sFc" firstAttribute="top" secondItem="7FG-IP-5li" secondAttribute="bottom" constant="30" id="xCP-2n-rOs"/>
+                            <constraint firstItem="99e-eR-Gvg" firstAttribute="trailing" secondItem="7FG-IP-5li" secondAttribute="trailing" constant="20" id="OJ3-Eg-2dA"/>
+                            <constraint firstItem="W1Z-fi-vGY" firstAttribute="leading" secondItem="99e-eR-Gvg" secondAttribute="leading" constant="20" id="T72-8y-Um0"/>
+                            <constraint firstItem="W1Z-fi-vGY" firstAttribute="top" secondItem="7FG-IP-5li" secondAttribute="bottom" constant="50" id="WcV-4Y-Kbb"/>
+                            <constraint firstItem="7FG-IP-5li" firstAttribute="top" secondItem="99e-eR-Gvg" secondAttribute="top" constant="30" id="cy4-pW-sXu"/>
+                            <constraint firstItem="7FG-IP-5li" firstAttribute="leading" secondItem="99e-eR-Gvg" secondAttribute="leading" constant="20" id="r2P-lM-QdV"/>
+                            <constraint firstItem="99e-eR-Gvg" firstAttribute="trailing" secondItem="W1Z-fi-vGY" secondAttribute="trailing" constant="20" id="xDK-qw-ngy"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="99e-eR-Gvg"/>
                     </view>
@@ -204,7 +228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7oG-7B-IpA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1512" y="-12"/>
+            <point key="canvasLocation" x="1511.5942028985507" y="-12.053571428571429"/>
         </scene>
         <!--Send View Controller-->
         <scene sceneID="U7y-PD-vw7">
